--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,10 @@ build-backend = "hatchling.build"
 
 [project]
 requires-python = ">= 3.10"
-name = "goodstats"
+name = "njbpy"
 version = "0.0.1"
 dependencies = [
-    "matplotlib",
-    "numpy",
-    "pandas",
-    "statsmodels",
-    "scipy",
-    "patsy"
+    "numpy"
 ]
 authors = [
     {name = "Noah Blair", email = "noahjblair@outlook.com"}
@@ -20,14 +15,13 @@ authors = [
 maintainers = [
     {name = "Noah Blair", email = "noahjblair@outlook.com"}
 ]
-description = "Statistics models and tests that return 'tidy' classes"
+description = "Utilities created for and used by Noah Blair"
 readme = "README.md"
 license = {file = "LICENSE"}
 keywords = [
-    "regression", "statistics"
+    "regex", "utilities"
 ]
 
 [project.urls]
-Homepage = "https://github.com/sodium-hydroxide/goodstats"
-Repository = "https://github.com/sodium-hydroxide/goodstats.git"
-
+Homepage = "https://github.com/sodium-hydroxide/blutils"
+Repository = "https://github.com/sodium-hydroxide/blutils.git"
